# toshl-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/toshl_mcp/: client.py  config.py  logging_utils.py  models.py  server.py  tools.py
tests/unittests/toshl_mcp/: test_client.py  test_config.py  test_logging_utils.py  test_models.py  test_server.py  test_tools.py
