[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toshl-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Fedele Mantuano", email = "mantuano.fedele@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.14.3",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toshl_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "ERA",  # eradicate
    "PL",   # pylint
    "TRY",  # tryceratops
    "PERF", # perflint
]
ignore = [
    "S101",   # assert used (ok in tests)
    "TRY003", # long exception messages
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["toshl_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
