[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toshl-mcp"
dynamic = ["version"]
description = "MCP server exposing Toshl Finance API to Claude Desktop"
authors = [
    {name = "Fedele Mantuano", email = "mantuano.fedele@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "pydantic>=2.10.0",
]

[project.scripts]
toshl-mcp = "toshl_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.3",
    "pre-commit>=4.0.0",
    "pyright>=1.1.0",
]

[tool.uv]

[tool.hatch.build.targets.wheel]
packages = ["src/toshl_mcp"]

[tool.hatch.version]
path = "src/toshl_mcp/__init__.py"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "ERA",  # eradicate
    "PL",   # pylint
    "TRY",  # tryceratops
    "PERF", # perflint
]
ignore = [
    "S101",   # assert used (ok in tests)
    "TRY003", # long exception messages
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "ARG", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["toshl_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
